# SmartiesTransformer

./: .gitignore  CMakeLists.txt  README.md  config.json
src/: main.cpp
src/analyzer/: analyzer.cpp  analyzer.hpp
src/calibrator/: calibrator.cpp  calibrator.hpp
src/config/: config.cpp  config.hpp
src/draw/: draw.cpp  draw.hpp
src/image/: image.cpp  image.hpp
